test/invalid/idl/union-any.widl
typedef (any or any) Any;
